--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -6,67 +6,96 @@
 
 
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <soup.neumorphism.NeumorphCardView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:id="@+id/btnAddProduct"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10dp"
+            android:id="@+id/btnAddProduct"
+            app:cardCornerRadius="@dimen/_5dp"
+            app:cardUseCompatPadding="true"
             android:textStyle="bold"
-            android:textColor="@color/text_color_heading"
-            app:neumorph_backgroundColor="@color/colorPrimaryDark"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-            app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
+            android:layout_gravity="end"
+            android:layout_marginEnd="@dimen/_10dp"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
+            android:textColor="@color/text_color_heading">
 
+            <TextView android:fontFamily="@font/montserrat_regular"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="  +  Add Product"
+                android:textStyle="bold"
+                android:padding="@dimen/_15dp"
+                android:gravity="center"
+                android:textSize="@dimen/txt_14sp"
+                android:textColor="@color/white"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+        </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:layout_width="34dp"
-                    android:layout_height="34dp"
-                    android:src="@android:drawable/ic_input_add"
-                    android:layout_marginStart="10dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:id="@+id/ivAdd"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginEnd="@dimen/_10dp"
+            android:weightSum="7">
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
-                    android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:endIconMode="none">
+
+                <AutoCompleteTextView
+                    android:id="@+id/etProduct"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center|right"
-                    android:textSize="15sp"
-                    android:id="@+id/txtBill"
-                    android:layout_marginEnd="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/ivAdd"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="Add Product" />
+                    android:padding="@dimen/_10dp"
+                    android:drawableStart="@drawable/search_icon"
+                    android:drawableTint="@color/colorPrimary"
+                    android:paddingRight="@dimen/_50dp"
+                    android:hint="Search Product" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:id="@+id/filter"
+                android:background="?attr/selectableItemBackground"
+                android:layout_marginStart="@dimen/_5dp"
+                android:padding="@dimen/_10dp"
+                app:tint="@color/colorPrimary"
+                android:src="@drawable/setting"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:background="?attr/selectableItemBackground"
+                android:id="@+id/moreOptions"
+                android:layout_marginStart="@dimen/_5dp"
+                android:padding="@dimen/_10dp"
+                app:tint="@color/colorPrimary"
+                android:src="@drawable/dots"/>
+
+        </LinearLayout>
 
 
 
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </soup.neumorphism.NeumorphCardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recyclerView"
-            android:layout_marginTop="100dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnAddProduct"/>
+            android:layout_marginTop="@dimen/_10dp"
+            tools:listitem="@layout/item_product"
+            tools:itemCount="2"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
