--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -13,61 +13,78 @@
         android:orientation="vertical"
         tools:context=".ui.inventory.tab.category.CategoryFrag">
 
-        <soup.neumorphism.NeumorphCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/text_color_heading"
-            app:neumorph_backgroundColor="@color/colorPrimaryDark"
-            android:gravity="center"
-            app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-            app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
 
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10dp"
+                android:weightSum="5"
+                android:padding="@dimen/_15dp"
+                android:orientation="horizontal"
+                android:background="@drawable/corner_four_grey">
 
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
-                    android:layout_width="wrap_content"
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="15sp"
-                    android:id="@+id/addCategory"
-                    android:layout_marginEnd="20dp"
-                    android:textStyle="bold"
-                    android:gravity="center"
+                    app:endIconMode="none"
+                    android:layout_weight="2"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="Add Category" />
-
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|right"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:id="@+id/etCategory"
-                    android:layout_marginStart="20dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/addCategory"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/etCategory"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="@dimen/_10dp"
+                        android:hint="Category Name" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:id="@+id/addCategory"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardUseCompatPadding="true"
+                    android:layout_weight="3"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="-5dp"
+                    android:layout_marginStart="@dimen/_10dp"
+                    app:cardBackgroundColor="@color/colorPrimaryDark"
+                    android:textColor="@color/text_color_heading"
+                    android:gravity="center">
+
+                    <TextView android:fontFamily="@font/montserrat_regular"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Add Category"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textSize="@dimen/txt_12sp"
+                        android:textColor="@color/white"/>
+
+                </androidx.cardview.widget.CardView>
 
 
-        </soup.neumorphism.NeumorphCardView>
+            </LinearLayout>
+
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/_10dp"
+            android:background="@drawable/corner_four_grey"
             app:layout_constraintTop_toBottomOf="@id/searchView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            tools:listitem="@layout/item_category"
             android:id="@+id/recyclerView"/>
 
 
