--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -126,6 +126,7 @@
                         android:visibility="@{isCameraOpen ? View.GONE : View.VISIBLE}"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
+                        android:layout_marginBottom="@dimen/_10dp"
                         android:layout_weight="1" />
                 </LinearLayout>
 
