--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -9,32 +9,72 @@
             name="category"
             type="com.kreativesquadz.billkit.model.Category" /> <!-- Replace "your.package.name" with your actual package name -->
 
+
     </data>
 
-    <androidx.cardview.widget.CardView
+
+    <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="2dp">
+        android:layout_marginStart="@dimen/_10dp"
+        android:layout_marginEnd="@dimen/_10dp"
+        android:orientation="vertical">
 
+        <!-- Main Item View -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+
+            <TextView
+                android:fontFamily="@font/montserrat_medium"
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@{category.categoryName}"
+                android:drawableRight="@drawable/ic_arrow_down"
+                android:padding="@dimen/_10dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/txt_16sp"
+                android:background="?attr/selectableItemBackground"
+                tools:text="Category"/>
+
+
+            <ImageView
+                android:layout_width="@dimen/_30dp"
+                android:layout_height="@dimen/_30dp"
+                android:layout_gravity="right|center"
+                android:id="@+id/deleteCategory"
+                android:visibility="gone"
+                android:layout_marginEnd="@dimen/_30dp"
+                android:src="@drawable/trash"/>
+
+        </FrameLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray"/>
+        <!-- Hidden Dropdown Content -->
         <LinearLayout
+            android:id="@+id/dropdown_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:visibility="gone"
+            android:orientation="vertical">
 
-            <!-- Customer Name -->
-            <TextView android:fontFamily="@font/montserrat_regular"
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{category.categoryName}"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:paddingBottom="4dp"
-                tools:text="DEMO" />
-
+                tools:itemCount="2"
+                tools:listitem="@layout/item_category_products"
+                android:id="@+id/recyclerViewProducts"/>
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
 </layout>
